2009-06-26  Ulrich Drepper  <drepper@redhat.com>

	* resolv/resolv.h: Define RES_SNGLKUPREOP.
	* resolv/res_init.c (res_setoptions): Recognize single-request-reopen
	option.
	* resolv/res_send.c (reopen): New function.  Broken out of...
	(send_dg): ... here.  Recognize RES_SNGLKUPREOP.  Implement second
	fallback mechanism.  If single-request fails switch to
	single-request-reopen mode which opens a new socket for the second
	request.

2009-06-25  Andreas Schwab  <aschwab@redhat.com>

	* sysdeps/powerpc/powerpc32/____longjmp_chk.S (LOAD_ARG): Define.
	(CHECK_SP): Use it.

2009-06-24  Andreas Schwab  <aschwab@redhat.com>

	* sysdeps/powerpc/powerpc32/power4/fpu/w_sqrtf.S: Fix cfa offset
	for saved registers.
	* sysdeps/powerpc/powerpc32/power4/fpu/w_sqrt.S: Likewise.
	* sysdeps/powerpc/powerpc32/power5/fpu/w_sqrtf.S: Likewise.
	* sysdeps/powerpc/powerpc32/power5/fpu/w_sqrt.S: Likewise.

2009-06-23  Andreas Schwab  <aschwab@redhat.com>

	* time/tzfile.c (__tzfile_read): Don't use an empty TZ string.

2009-06-22  Ulrich Drepper  <drepper@redhat.com>

	* po/id.po: Update from translation team.

	* po/bg.po: Update from translation team.

2009-06-22  H.J. Lu  <hongjiu.lu@intel.com>

	* string/strncmp.c (STRNCMP): New.  Defined to strncmp if not
	defined.
	(strncmp): Renamed to STRNCMP.
	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strncmp-c for string.
	* sysdeps/x86_64/multiarch/init-arch.h (HAS_SSE4_2): Define.
	* sysdeps/x86_64/multiarch/strcmp.S: New file.
	* sysdeps/x86_64/multiarch/strncmp.S: New file.
	* sysdeps/x86_64/multiarch/strncmp-c.c: New file.

2009-06-19  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/Makefile (distribute): Add ifuncmain1staticpie.c,
	ifuncmain5.c, ifuncmain5pic.c, ifuncmain5picstatic.c,
	ifuncmain5pie.c, ifuncmain5static.c, ifuncmain5staticpic.c,
	ifuncdep5.c, ifuncdep5pic.c, ifuncmod5.c, ifuncmain7.c,
	ifuncmain7pic.c, ifuncmain7picstatic.c, ifuncmain7pie.c, and
	ifuncmain7static.c.