@@ -11,5 +11,7 @@ CPUID_EAX_OFFSET	offsetof (struct cpuid_registers, eax)
 CPUID_EBX_OFFSET	offsetof (struct cpuid_registers, ebx)
 CPUID_ECX_OFFSET	offsetof (struct cpuid_registers, ecx)
 CPUID_EDX_OFFSET	offsetof (struct cpuid_registers, edx)
+FAMILY_OFFSET		offsetof (struct cpu_features, family)
+MODEL_OFFSET		offsetof (struct cpu_features, model)
 
 COMMON_CPUID_INDEX_1
